fix: adjust comment visibility for greater accessibility

--- a/src/assets/styles/syntax.scss
+++ b/src/assets/styles/syntax.scss
@@ -2,7 +2,7 @@
   --astro-code-color-text: #20242d;
   --astro-code-color-background: #ebebe8;
   --astro-code-token-constant: #27598a;
-  --astro-code-token-comment: #616e88;
+  --astro-code-token-comment: #4e5564;
   --astro-code-token-keyword: #27598a;
   --astro-code-token-function: #077295;
   --astro-code-token-string-expression: #6f4467;
@@ -16,7 +16,7 @@
     --astro-code-color-text: #eceff4;
     --astro-code-color-background: #2e3440;
     --astro-code-token-constant: #81a1c1;
-    --astro-code-token-comment: #616e88;
+    --astro-code-token-comment: #88c0d0;
     --astro-code-token-keyword: #81a1c1;
     --astro-code-token-function: #88c0d0;
     --astro-code-token-string-expression: #a3be8c;
